Added LinkToContent and EmbeddedContent JSON format providers

--- a/Apps/AzureSupport/AzureSupport.csproj
+++ b/Apps/AzureSupport/AzureSupport.csproj
@@ -156,6 +156,7 @@
     <Compile Include="Partials\AttachedToObjectCollection.cs" />
     <Compile Include="Partials\Comment.cs" />
     <Compile Include="Partials\CommentCollection.cs" />
+    <Compile Include="Partials\EmbeddedContent.cs" />
     <Compile Include="Partials\LinkToContent.cs" />
     <Compile Include="SyncSupport.cs" />
     <Compile Include="TheBall.CORE\ConfirmAccountMergeFromEmailImplementation.cs" />
