--- a/Apps/WebInterface/InstanceSettings_TheBallTest.config
+++ b/Apps/WebInterface/InstanceSettings_TheBallTest.config
@@ -1,11 +1,11 @@
 <appSettings>
   <add key="ValidationSettings:UnobtrusiveValidationMode" value="None" />
-  <add key="AdminGroupID" value="5572fe40-3ff3-46c8-9a5b-20a728665bbb"/>
+  <add key="AdminGroupID" value="e7f40617-b984-4753-8cfa-4cd717f18b6d"/>
   <add key="EmailFromAddress" value="no-reply-test@theball.me"/>
   <add key="EmailValidationURLWithoutID" value="https://test.theball.me/emailvalidation/"/>
   <add key="DefaultAccountTemplateList" value="webui,cpanel"/>
   <add key="AccountDefaultRedirect" value="webui/html/account.html"/>
-  <add key="DefaultGroupTemplateList" value="groupmanagement,categoriesandcontent"/>
+  <add key="DefaultGroupTemplateList" value="categoriesandcontent,cpanel"/>
   <add key="GroupDefaultRedirect" value="categoriesandcontent/html/group.html"/>
   <add key="WorkerActiveContainerName" value="test-caloom-com" />
   <add key="ContainerRedirects" value="test-theball-me:test-caloom-com"/>
