Changed default templates for groups and accounts

--- a/Apps/WebInterface/InstanceSettings.config
+++ b/Apps/WebInterface/InstanceSettings.config
@@ -4,9 +4,9 @@
   <add key="EmailFromAddress" value="no-reply-test@theball.me"/>
   <add key="EmailValidationURLWithoutID" value="https://test.theball.me/emailvalidation/"/>
   <add key="DefaultAccountTemplateList" value="webui,cpanel"/>
-  <add key="AccountDefaultRedirect" value="webui/html/account.html"/>
+  <add key="AccountDefaultRedirect" value="cpanel/html/account.html"/>
   <add key="DefaultGroupTemplateList" value="categoriesandcontent,cpanel"/>
-  <add key="GroupDefaultRedirect" value="categoriesandcontent/html/group.html"/>
+  <add key="GroupDefaultRedirect" value="cpanel/html/cpanel.html"/>
   <add key="WorkerActiveContainerName" value="test-caloom-com" />
   <add key="ContainerRedirects" value="test-theball-me:test-caloom-com"/>
   <add key="RedirectFromFolderFileName" value="RedirectFromFolder.red"/>
