--- a/Apps/WebInterface/InstanceSettings_OIPBeta.config
+++ b/Apps/WebInterface/InstanceSettings_OIPBeta.config
@@ -4,9 +4,9 @@
   <add key="EmailFromAddress" value="no-reply-betaoip@aaltoglobalimpact.org"/>
   <add key="EmailValidationURLWithoutID" value="https://betaoip.aaltoglobalimpact.org/emailvalidation/"/>
   <add key="DefaultAccountTemplateList" value="webui,cpanel"/>
-  <add key="AccountDefaultRedirect" value="webui/html/account.html"/>
-  <add key="DefaultGroupTemplateList" value="groupmanagement,categoriesandcontent"/>
-  <add key="GroupDefaultRedirect" value="categoriesandcontent/html/group.html"/>
+  <add key="AccountDefaultRedirect" value="cpanel/html/account.html"/>
+  <add key="DefaultGroupTemplateList" value="categoriesandcontent,cpanel"/>
+  <add key="GroupDefaultRedirect" value="cpanel/html/cpanel.html"/>
   <add key="WorkerActiveContainerName" value="betaoip-aaltoglobalimpact-org" />
   <add key="ContainerRedirects" value=""/>
   <add key="RedirectFromFolderFileName" value="RedirectFromFolder.red"/>
