--- a/Apps/WebInterface/InstanceSettings_TheBallSchools.config
+++ b/Apps/WebInterface/InstanceSettings_TheBallSchools.config
@@ -4,9 +4,9 @@
   <add key="EmailFromAddress" value="no-reply-schools@theball.me"/>
   <add key="EmailValidationURLWithoutID" value="https://schools.theball.me/emailvalidation/"/>
   <add key="DefaultAccountTemplateList" value="webui,cpanel"/>
-  <add key="AccountDefaultRedirect" value="webui/html/account.html"/>
-  <add key="DefaultGroupTemplateList" value="groupmanagement,categoriesandcontent"/>
-  <add key="GroupDefaultRedirect" value="categoriesandcontent/html/group.html"/>
+  <add key="AccountDefaultRedirect" value="cpanel/html/account.html"/>
+  <add key="DefaultGroupTemplateList" value="categoriesandcontent,cpanel"/>
+  <add key="GroupDefaultRedirect" value="cpanel/html/cpanel.html"/>
   <add key="WorkerActiveContainerName" value="schools-caloom-com" />
   <add key="ContainerRedirects" value="schools-theball-me:schools-caloom-com"/>
   <add key="RedirectFromFolderFileName" value="RedirectFromFolder.red"/>
