Modified default templates for business.theball.me

--- a/Apps/WebInterface/InstanceSettings_TheBallBusiness.config
+++ b/Apps/WebInterface/InstanceSettings_TheBallBusiness.config
@@ -4,9 +4,9 @@
   <add key="EmailFromAddress" value="no-reply-business@theball.me"/>
   <add key="EmailValidationURLWithoutID" value="https://business.theball.me/emailvalidation/"/>
   <add key="DefaultAccountTemplateList" value="webui,cpanel"/>
-  <add key="AccountDefaultRedirect" value="webui/html/account.html"/>
-  <add key="DefaultGroupTemplateList" value="groupmanagement,categoriesandcontent"/>
-  <add key="GroupDefaultRedirect" value="categoriesandcontent/html/group.html"/>
+  <add key="AccountDefaultRedirect" value="cpanel/html/account.html"/>
+  <add key="DefaultGroupTemplateList" value="categoriesandcontent,cpanel"/>
+  <add key="GroupDefaultRedirect" value="cpanel/html/cpanel.html"/>
   <add key="WorkerActiveContainerName" value="business-caloom-com" />
   <add key="ContainerRedirects" value="business-theball-me:business-caloom-com"/>
   <add key="RedirectFromFolderFileName" value="RedirectFromFolder.red"/>
