Fixed cookie expiration, also fixed static cookie encryption issue

--- a/Apps/WebInterface/Web.config
+++ b/Apps/WebInterface/Web.config
@@ -139,6 +139,7 @@
       <add name="RESTRequestForwardingHandler" path="/REST/*" verb="*" type="WebInterface.RESTRequestForwardingHandler" resourceType="Unspecified" />
       -->
     </handlers>
+    <caching enabled="false" enableKernelCache="false" />
   </system.webServer>
   <system.net>
     <!--
