Added structures for dynamic content grouping

--- a/Apps/AzureSupport/AzureSupport.csproj
+++ b/Apps/AzureSupport/AzureSupport.csproj
@@ -158,6 +158,8 @@
     <Compile Include="Partials\CommentCollection.cs" />
     <Compile Include="Partials\DynamicContent.cs" />
     <Compile Include="Partials\DynamicContentCollection.cs" />
+    <Compile Include="Partials\DynamicContentGroup.cs" />
+    <Compile Include="Partials\DynamicContentGroupCollection.cs" />
     <Compile Include="Partials\EmbeddedContent.cs" />
     <Compile Include="Partials\LinkToContent.cs" />
     <Compile Include="SyncSupport.cs" />
